--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "vodafone-cocktails",
+  "homepage": "https://ronnoc5991.github.io/cocktails/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "preview": "vite preview",
     "test": "vitest"
   },
@@ -21,6 +24,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "gh-pages": "^5.0.0",
     "jsdom": "^21.1.0",
     "sass": "^1.58.3",
     "typescript": "^4.9.3",
